# angular_bazel_fun

./: .bazelignore  .bazelrc  .editorconfig  .gitignore  BUILD.bazel  WORKSPACE  package.json
.devcontainer/: Dockerfile  devcontainer.json
src/: BUILD.bazel  hello_world.ts  tsconfig.json
src/ng-todo-app/: BUILD.bazel  angular.json  index.dev.html  index.prod.html  main.dev.ts  main.prod.ts  rollup.config.js  rxjs_shim.js  styles.scss
src/ng-todo-app/app/: BUILD.bazel  app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts
src/ng-todo-app/pages/hello-world/: BUILD.bazel  hello-world.component.html  hello-world.component.scss  hello-world.component.ts  hello-world.module.ts
src/ng-todo-app/pages/todo-page/: BUILD.bazel  todo-page.component.html  todo-page.component.scss  todo-page.component.ts  todo-page.module.ts
src/ng-todo-app/pages/todo-page/store/: BUILD.bazel  store.actions.ts  store.module.ts  store.reducers.ts  store.state.ts
src/ng_todo_app/: angular.json
src/ng_todo_app/pages/hello_world/: BUILD.bazel  hello_world.component.scss  hello_world.component.ts  hello_world.module.ts
src/pkg_web/: BUILD.bazel  assembler.js  pkg_web.bzl
src/shared/material/: BUILD.bazel  material.module.ts
