load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

package(default_visibility = ["//:__subpackages__"])

exports_files(["pkg_web.bzl"])

nodejs_binary(
    name = "assembler",
    data = ["assembler.js"],
    entry_point = ":assembler.js",
    install_source_map_support = False,
)
