load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "app-styles",
    src = "app.component.scss",
)

ng_module(
    name = "app",
    srcs = [
        "app-routing.module.ts",
        "app.component.ts",
        "app.module.ts",
    ],
    assets = [
        ":app.component.html",
        ":app-styles",
    ],
    deps = [
        "//src/ng-todo-app/pages/hello-world",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "@npm//@angular/platform-browser",
    ],
)
