load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "app-styles",
    src = "app.component.scss",
)

ng_module(
    name = "app",
    srcs = [
        "app.component.ts",
        "app.module.ts",
        "app-routing.module.ts",
    ],
    assets = [
        ":app.component.html",
        ":app-styles",
    ],
    deps = [
        "//src/ng-todo-app/pages/hello-world",
        "//src/ng-todo-app/pages/todo-page",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@ngrx/store",
        "@npm//@ngrx/store-devtools",
    ],
)
