load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")
load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//:__subpackages__"])

sass_binary(
    name = "hello-world-styles",
    src = "hello-world.component.scss",
)

ng_module(
    name = "hello-world",
    srcs = [
        "hello-world.component.ts",
        "hello-world.module.ts",
    ],
    assets = [
        "hello-world.component.html",
        ":hello-world-styles",
    ],
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/router",
    ],
)
